@startuml

skinparam DefaultFontName Arial
skinparam ClassBackgroundColor #E8F4F8
skinparam ClassBorderColor #2C3E50
skinparam noteBackgroundColor #FDEDEC
skinparam noteBorderColor #E74C3C

title <size:25> Diagrama de Clases HU2: Muro de Intercambio y Motor de Publicaciones

package "Capa de Entidades" {

    class Usuario {
        - idUsuario: String
        - nombre: String
        - correoElectronico: String
        - telefono: String
        - descripcionPersonal: String
        - reputacionHistorica: Double
        - sancion
        <space:10> sancionActiva: Boolean
        <space:10> fechaSancion: Date
        + Usuario(nombre: String, correo: String, telefono: String, imagen: Imagen)
    }

    class Monedero {
        - creditosDisponibles: int
        - creditosComprometidos: int
        + tieneFondosSuficiente(monto: int): Boolean
        + calcularCreditosComprometidos(monto: int): Void
        + Monedero()
    }

    class Habilidad {
        - nombre: String
        - precioCreditos: int
        - descripcionHabilidad: String
        + Habilidad(nombre: String, precioCreditos: int, descripcion: String)
    }

    class Necesidad {
        - nombre: String
        - descripcionNecesidad: String
        + Necesidad(nombre: String, descripcion: String)
    }

    class Notificacion {
        - idNotificacion: String
        - idRemitente: String
        - idDestinatario: String
        - mensaje: String
        - tipo: TipoNotificacion
        - estadoLectura: boolean
        + Notificacion(idRemitente: String, idDestinatario: String, mensaje: String, tipo: TipoNotificacion)
    }

    class MuroPublicaciones {
        + obtenerPublicaciones(): Void
        + filtrarPublicaciones(): Void
        + MuroPublicaciones()
    }

    class SolicitudIntercambio {
        - idSolicitudIntercambio: String
        - idOfertante: String
        - idDemandante: String
        - fechaEmision: Date
        - nombreServicio: String
        - precioCreditos: int
        - descripcionServicio: String
        - estado: EstadoSolicitud
        + verificarExpiracion(fechaActual: Date): Boolean
        + SolicitudIntercambio()
    }

    class Imagen {
        - ruta: String
        + Imagen(ruta: String)
    }

    class Transaccion {
    }



    Usuario "1" *-- "1" Monedero
    Usuario "1" *-- "*" Habilidad
    Usuario "1" *-- "*" Necesidad
    Usuario "1" -- "*" SolicitudIntercambio : envia >
    Usuario "1" -- "*" SolicitudIntercambio : recibe >
    SolicitudIntercambio "*" --> "0..1" Habilidad : solicita >
    SolicitudIntercambio "*" --> "0..1" Necesidad : responde a >
    SolicitudIntercambio "1" ..> "0..1" Transaccion : genera >
    Usuario "1" *-- "1" Imagen
    Usuario "1" -- "*" Notificacion : posee >

    enum EstadoSolicitud {
        ACEPTADA
        PENDIENTE
        RECHAZADA
    }

    enum TipoNotificacion {
        ALERTA_SISTEMA
        NUEVA_SOLICITUD_ENTRANTE
        ESTADO_SOLICITUD_CAMBIADO
        TRANSACCION_ACTUALIZADA
        MOVIMIENTO_MONEDERO
        ACTUALIZACION_SUBASTA
    }
}




package "Capa de GestiÃ³n" {

    class GestionUsuario {
        + registrarUsuario(nombre: String, correo: String, telefono: String, foto: String): Void
        + calcularReputacionHistorica(idUsuario: String): Void
        + calcularReputacionServicio(idUsuario: String, nombreServicio: String, calificacion: int): Void
        + buscarUsuario(idUsuario: String): Usuario
        + modificarDatosUsuario(idUsuario: String): Void
        + GestionUsuario()
    }

    class GestionSolicitudIntercambio {
        + registrarSolicitud(idOfertante: String, idDemandante: String, nombreServicio: String, precioCreditos: int, descripcionServicio: String): Void
        + buscarSolicitud(idSolicitudIntercambio: String): SolicitudIntercambio
        + actualizarEstado(idSolicitudIntercambio: String, estado: EstadoSolicitud): Void
        + procesarExpiracionesAutomaticas():Void
        + enviarNotificacion(destinatario: idUsuario, mensaje: String, tipo: TipoNotificacion): Void
        + GestionSolicitudIntercambio()
    }

    GestionSolicitudIntercambio o-- SolicitudIntercambio
    GestionUsuario o-- Usuario
}

package "Capa de Persistencia" {

    class PersistenciaUsuario {
        - RUTA_ARCHIVO: String = "data/usuarios.json"
        + cargar(): List<Usuario>
        + guardar(datos: List<Usuario>): void
    }

}

@enduml